# gnomecs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: gnomecs.h
include/allocators/: allocator.h  helpers.h  systemallocator.h
include/archetype/: archetype.h
include/collections/: bitset.h  chunkedlist.h  slice.h  table.h  vector.h
include/collections/absolute/: hashmap.h
include/components/: components.h  componentsdb.h
include/log/: log.h
include/search/: iterator.h  query.h  querycache.h
include/world/: entity.h  world.h
source/allocators/: allocator.c  systemallocator.c
source/archetype/: archetype.c
source/collections/: bitset.c  chunkedlist.c  slice.c  table.c  vector.c
source/collections/absolute/: hashmap.c
source/components/: componentsdb.c
source/log/: log.c
source/search/: iterator.c  query.c  querycache.c
source/world/: entity.c  world.c
test/: test.c
